# HNSWIndex.Net

./: .gitignore  HNSWIndex.sln  MANIFEST.in  README.md  before_all_linux.sh  build.sh  build_local.sh  pyproject.toml  setup.py
.github/: before_all_linux.sh
.github/workflows/: publish-nuget.yml  publish_pypi.yml
HNSWIndex/: DistanceCalculator.cs  DistanceComparer.cs  GraphConnector.cs  GraphData.cs  GraphDataSnapshot.cs  GraphLayer.cs  GraphLocker.cs  GraphNavigator.cs  HNSWIndex.cs  HNSWIndex.csproj  HNSWIndex.sln  HNSWIndexSnapshot.cs  HNSWInfo.cs  HNSWParameters.cs  Heuristic.cs  KNNResult.cs  NestedListWrapper.cs  Node.cs  NodeDistance.cs  ReallocateEventArgs.cs  VisitedListPool.cs
HNSWIndex.Tests/: GraphResizeTests.cs  GraphSerializationTests.cs  GraphTests.cs  HNSWIndex.Tests.csproj  ParametersTests.cs  Utils.cs
HNSWIndex/Metrics/: CosineMetric.cs  EuclideanMetric.cs
bindings/: __init__.py  bindings.py
bindings/HNSWIndex.Native/: HNSWIndex.Native.csproj  HNSWIndexExports.cs
bindings/__tests__/: metric_test.py  parameters_test.py  recall_test.py
src/HNSWIndex/: BinaryHeap.cs  DistanceComparer.cs  GraphConnector.cs  GraphData.cs  GraphDataSnapshot.cs  GraphLayer.cs  GraphLocker.cs  GraphNavigator.cs  HNSWIndex.cs  HNSWIndex.csproj  HNSWIndex.sln  HNSWIndexSnapshot.cs  HNSWInfo.cs  HNSWParameters.cs  Heuristic.cs  NestedListWrapper.cs  Node.cs  NodeDistance.cs  OptionalLock.cs  VisitedListPool.cs
src/HNSWIndex.Tests/: GraphSerializationTests.cs  GraphTests.cs  HNSWIndex.Tests.csproj  MetricsTests.cs  ParametersTests.cs
(+1 files in other folders)
