[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hnswindex"
version = "1.6.0"
description = "HNSWIndex.Net python module"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mateusz Skarupski (Skaipi)" }]
dependencies = ["numpy>=1.22"]

[tool.setuptools]
package-dir = { "hnswindex" = "bindings" }
packages = ["hnswindex"]

[tool.setuptools.package-data]
hnswindex = ["artifacts/native/**/*"]

[tool.setuptools.exclude-package-data]
hnswindex = ["*.pdb", "*.xml", "*.dbg"]
